compiler/testData/diagnostics/tests/smartCasts/loops/doWhileNull.fir.kt
fun foo(s: String?): Int {
    do {
    } while (s==null)
    return s.<!INAPPLICABLE_CANDIDATE!>length<!>
}